[project]
name = "zeek-flink-pipeline"
version = "0.1.0"
description = "Flink pipeline for Zeek Zeek logs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyflink>=1.17",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
